--- a/index.html
+++ b/index.html
@@ -1,27 +1,30 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" href="/logo-icon.png" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>AyJale</title>
-    
-    <!-- Open Graph / Facebook / WhatsApp -->
-    <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://ayjale.com/" />
-    <meta property="og:title" content="AyJale - Conectando Talento" />
-    <meta property="og:description" content="Encuentra tu próximo empleo o al candidato ideal en AyJale." />
-    <meta property="og:image" content="/logo-icon.png" />
 
-    <!-- Twitter -->
-    <meta property="twitter:card" content="summary_large_image" />
-    <meta property="twitter:url" content="https://ayjale.com/" />
-    <meta property="twitter:title" content="AyJale - Conectando Talento" />
-    <meta property="twitter:description" content="Encuentra tu próximo empleo o al candidato ideal en AyJale." />
-    <meta property="twitter:image" content="/logo-icon.png" />
-  </head>
-  <body>
-    <div id="root"></div>
-    <script type="module" src="/src/main.jsx"></script>
-  </body>
+<head>
+  <meta charset="UTF-8" />
+  <link rel="icon" href="/logo-icon.png" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>AyJale</title>
+
+  <!-- Open Graph / Facebook / WhatsApp -->
+  <meta property="og:type" content="website" />
+  <meta property="og:url" content="https://ayjale.com/" />
+  <meta property="og:title" content="AyJale - Conectando Talento" />
+  <meta property="og:description" content="Encuentra tu próximo empleo o al candidato ideal en AyJale." />
+  <meta property="og:image" content="https://ayjale.com/logo-icon.png" />
+
+  <!-- Twitter -->
+  <meta property="twitter:card" content="summary_large_image" />
+  <meta property="twitter:url" content="https://ayjale.com/" />
+  <meta property="twitter:title" content="AyJale - Conectando Talento" />
+  <meta property="twitter:description" content="Encuentra tu próximo empleo o al candidato ideal en AyJale." />
+  <meta property="twitter:image" content="https://ayjale.com/logo-icon.png" />
+</head>
+
+<body>
+  <div id="root"></div>
+  <script type="module" src="/src/main.jsx"></script>
+</body>
+
 </html>
