--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
 
 <body>
   <div id="root"></div>
+  <script>console.log('HTML loaded, attempting to load main.jsx...');</script>
   <script type="module" src="/src/main.jsx"></script>
 </body>
 
